use mongodb instead of mysql